# chat-application

./: README.md  practice.js
chat-application/: Cargo.toml
chat-application-ui/: package-lock.json  package.json
chat-application-ui/src/: App.js
chat-application-ui/src/pages/: Chat.js  Home.js  SearchBar.js  Users.js
chat-application-ui/src/pages/Login_Components/: SignIn.js  SignUp.js  SignUp.module.css
chat-application-ui/src/pages/css/: Chat.module.css  Home.module.css  searchbar.module.css  users.module.css
chat-application/src/: Cargo.toml  handlers.rs  main.rs
chat-application/src/handlers/: Services.rs
